<resources>
    <string name="app_name" translatable="false">Practical</string>
    <string name="facebook_app_id">461519798001967</string>
    <string name="fb_login_protocol_scheme">fb461519798001967</string>
    <string name="web_client_id">288241916338-qd96g1m7crd8kr5ltnrd6h3rrq59k78o.apps.googleusercontent.com</string>
    <string name="twitter_consumer_key" translatable="false">9gVY8bLw3FI91B3EMecx8FZ3G</string>
    <string name="twitter_consumer_secret" translatable="false">wAj1egAoijrrF57ZPJRggI846N4lbIWMFvgmbQb26GzenEoo6E</string>
    <string name="error_internet_connection" translatable="false">Please check your network connection and then try again</string>
    <string name="error_network" translatable="false">There was a Problem connecting to the Server, please check your network connection, and then try again.</string>
    <string name="ok">Ok</string>
    <string name="error_file_download">Problem in file download</string>
    <string name="lbl_total_correct_incorrect_answer" formatted="false">%d/%d</string>
    <string name="lbl_des_sign" translatable="false">-</string>
    <string name="semi_colon" translatable="false">:</string>
    <string name="lbl_hash" translatable="false">#</string>
    <string name="dollar_sign" translatable="false">£%d</string>
    <string name="dollar_sign_in_string" translatable="false">£%s</string>
    <string name="percentage_sign_in_string" translatable="false">+ %s\%% Tax</string>
    <string-array name="imageExtension">
        <item>jpg</item>
        <item>png</item>
        <item>jpeg</item>
    </string-array>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="hint_forgot_pwd">Forgot Password?</string>
    <string name="hint_sign_up_account">Don\'t have an account?</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="error_username">Please enter nickname or email</string>
    <string name="error_pwd_min_length">Password must contain 6 to 12 characters</string>
    <string name="error_password_not_match">New password does not match with the reset new password</string>
    <string name="error_pwd_mandatory">Please enter password</string>
    <string name="error_newpwd_mandatory">Please enter new password</string>
    <string name="error_oldpwd_mandatory">Please old enter old password</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email_id">Email ID</string>
    <string name="hint_dob">Date Of Birth</string>
    <string name="btn_log_in">Log in</string>
    <string name="hint_sign_in_account">Already have an account?</string>
    <string name="error_email">Please enter email address</string>
    <string name="error_valid_email">Please enter valid email address</string>
    <string name="error_name">Please enter full name</string>
    <string name="error_date_of_birth">Please enter date of birth</string>
    <string name="error_company_name">Please enter company name</string>
    <string name="error_quantity">Please enter quantity</string>
    <string name="error_mail">Please enter Email ID</string>
    <string name="lbl_forgot_pwd">Forgot Password</string>
    <string name="lbl_forgot_pwd_note">Requesting you to enter email address you used while register
    and you will receive a link to reset your password in a mail.</string>
    <string name="btn_submit">Submit</string>
    <string name="title_enter_otp">Enter OTP</string>
    <string name="hint_enter_otp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="hint_re_send_otp">Resend OTP</string>
    <string name="error_verify_code">Verification code is not valid</string>
    <string name="title_create_new_pw">Create New Password</string>
    <string name="hint_create_pwd">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="hint_new_pwd">New Password</string>
    <string name="hint_new_pwd_again">New Password Again</string>
    <string name="error_confirm_password">Please enter repeat password</string>
    <string name="error_confirm_pwd_mandatory">Please enter repeat password</string>
    <string name="lbl_enter_company_id">Enter Company ID</string>
    <string name="lbl_company_id_note">Search your company with company ID, If your company is already registered with us.</string>
    <string name="hint_company_id">Company ID</string>
    <string name="btn_continue">Continue</string>
    <string name="skip">Skip</string>
    <string name="edit">Edit</string>
    <string name="hello">Hello</string>
    <string name="home">Home</string>
    <string name="assignhistory">Assign History</string>
    <string name="watched">Watched</string>
    <string name="saved">Saved</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faq">FAQs</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="logout">Logout</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="search">Search</string>
    <string name="details">Details</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="hint_update_personal_detail">Update your personal details</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="update">Update</string>
    <string name="btn_change_password">Change Password</string>
    <string name="title_change_password">Change Password</string>
    <string name="hint_change_password">Change your password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_repeat_new_password">Repeat New Password</string>
    <string name="modules">Modules</string>
    <string name="courses">Courses</string>
    <string name="score">Score</string>
    <string name="knowledge_check">Knowledge Check</string>
    <string name="read_more">Read More</string>
    <string name="lbl_bookmark">Bookmark</string>
    <string name="lbl_bookmark_added">Bookmark Added</string>
    <string name="lbl_completion_note_title">On completion of this section, you will:</string>
    <string name="lbl_completion_note_note1">Know what asbestos is;</string>
    <string name="lbl_completion_note_note2">Understand the brief history of asbestos;</string>
    <string name="lbl_completion_note_note3">Understand the characteristics of the two rock categories where asbestos can be found.</string>
    <string name="lbl_your_quiz_history">Your quiz history:</string>
    <string name="review">Review</string>
    <string name="btn_take_another_quiz">Take Another Quiz</string>
    <string name="saved_video">Saved Video</string>
    <string name="title_your_assignhistory">Assign History</string>
    <string name="title_your_certificateshistory">Certificate History</string>
    <string name="btn_download">Download</string>
    <string name="question" formatted="false">Question %d/%d</string>
    <string name="error_select_single_option">Select any one option</string>
    <string name="error_select_multiple_option">Select more than one option</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_end_quiz">End Quiz</string>
    <string name="btn_next">Next Question</string>
    <string name="btn_go_to_home">Back to Home</string>
    <string name="btn_go_to_module">Go to Module</string>
    <string name="lbl_congratulation">Congratulation</string>
    <string name="lbl_oh">Ohhhhh!!!</string>
    <string name="lbl_passed_quiz_text">You have passed !!!</string>
    <string name="lbl_failed_quiz_text">You have failed !!!</string>
    <string name="lbl_certificate_note">Certificate has been sent on your registered mail ID.Click on below button to download.</string>
    <string name="lbl_encourage_watch_video_again">We encourage you to watch video and try again.</string>
    <string name="btn_download_your_certificate">Download your Certificate</string>
    <string name="btn_click_to_save_certificate">Click here to share your certificate</string>
    <string name="lbl_quiz_summery">Quiz Summary:</string>
    <string name="lbl_correct_answer">Correct Answer</string>
    <string name="lbl_in_correct_answer">Incorrect Answer</string>
    <string name="btn_review_this_quiz">Review This Quiz</string>
    <string name="btn_take_quiz_again">Take a quiz again</string>
    <string name="msg_unauthorized">We are signing you out as we found your account access from another device</string>
    <string name="error_complete_video_note">You must watch video before moving on to the quiz.</string>
    <string name="lbl_duration">Duration</string>
    <string name="lbl_languages">Languages</string>
    <string name="btn_buy_now">Buy Now</string>
    <string name="lbl_introduction">Introduction</string>
    <string name="lbl_what_will_you_learn">What will you learn?</string>
    <string name="lbl_single_user">Individual User</string>
    <string name="lbl_corporate">Corporate</string>
    <string name="hint_company_name">Company Name</string>
    <string name="hint_company_code_optional">Company Code(Optional)</string>
    <string name="title_create_account">Create Account</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="error_image_format">Invalid file format. Please choose the JPG,PNG and JPEG format</string>
    <string name="msg_quiz_time_out">Time is over</string>
    <string name="msg_no_application_found">No Application available to view pdf</string>
    <string name="view_pdf">View PDF</string>
    <string name="cancel">Cancel</string>
    <string name="msg_saved_file_in">Your certificate saved in:\n</string>
    <string name="invoice_saved_file_in">Your invoice saved in:\n</string>
    <string name="lbl_order_no">Order No</string>
    <string name="lbl_display_number_of_modules">(%d Modules)</string>
    <string name="lbl_qty">Qty:</string>
    <string name="lbl_remaining_qty">Remaining Qty:</string>
    <string name="lbl_remove_this_item">Remove this item</string>
    <string name="msg_added_to_cart">Added to cart</string>
    <string name="lbl_price_details">Bill Details</string>
    <string name="lbl_amount_payable">Total to Pay</string>
    <string name="title_my_cart">Cart</string>
    <string name="credit_card_digits">1234567890-</string>
    <string name="number_digits">1234567890</string>
    <string name="hint_quantity">Quantity</string>
    <string name="empty_watched_video_title">Haven\'t watched any courses?</string>
    <string name="empty_watched_video_description">Explore our health and safety\ncourses now.</string>
    <string name="empty_certificates_title">Take a look into our health and safety\ncourses and achieve the certificate.</string>
    <string name="empty_promo_video_title">Promo video unavailable.</string>
    <string name="empty_certificates_description">Note: You can save your certificate in your drive.</string>
    <string name="empty_saved_video_title">Your bookmarked videos bucket is empty!</string>
    <string name="lbl_display_price_items">Total Cost (Items)</string>
    <string name="lbl_my_courses">My Courses</string>
    <string name="lbl_purchased_history">Purchase History</string>
    <string name="lbl_certificate_validation">Certificate Validation</string>
</resources>